--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
     "electron": "^27.0.0",
-    "electron-vite": "^2.0.0",
-    "postcss": "^8.4.32",
+    "electron-vite": "^3.1.0",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.2.2",
-    "vite": "^5.0.5"
+    "vite": "^6.2.6"
   },
   "dependencies": {
     "@langchain/core": "^0.3.0",
