--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.0",
+    "@langchain/core": "^0.3.44",
+    "@langchain/google-genai": "^0.2.3",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
