--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.44",
-    "@langchain/google-genai": "^0.2.3",
+    "@ai-sdk/google": "^0.0.27",
+    "@mastra/core": "^0.0.14",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "langchain": "^0.3.21",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
