--- a/mastra/package.json
+++ b/mastra/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.11",
     "@mastra/core": "^0.8.2",
+    "litellm": "^0.12.0",
     "mastra": "^0.4.8",
     "zod": "^3.24.2"
   },
