--- a/mastra/package.json
+++ b/mastra/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@ai-sdk/google": "^1.2.11",
 		"@mastra/core": "^0.8.2",
+		"@mastra/mcp": "^0.3.10",
 		"@modelcontextprotocol/sdk": "^1.9.0",
 		"litellm": "^0.12.0",
 		"mastra": "^0.4.8",
