--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,19 +1,20 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "types": ["node"],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/renderer/src/*"]
-    }
-  },
-  "include": [
-    "electron.vite.config.ts",
-    "src/main/**/*.ts",
-    "src/preload/**/*.ts"
-  ]
+	"compilerOptions": {
+		"composite": true,
+		"module": "ESNext",
+		"moduleResolution": "bundler",
+		"resolveJsonModule": true,
+		"allowSyntheticDefaultImports": true,
+		"types": ["node"],
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/renderer/src/*"]
+		}
+	},
+	"include": [
+		"electron.vite.config.ts",
+		"src/main/**/*.ts",
+		"src/preload/**/*.ts",
+		"mastra/src/**/*.ts"
+	]
 }
