--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 	},
 	"dependencies": {
 		"@ai-sdk/google": "^1.2.11",
+		"@mastra/core": "^0.8.3",
+		"@mastra/mcp": "^0.3.10",
 		"@radix-ui/react-avatar": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.7",
