--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "llm-client",
 	"version": "1.0.0",
-	"description": "LLM Client with MCP functionality",
-	"main": "out/main/index.js",
+	"description": "LLM Client with Mastra functionality",
+	"main": "dist/main/index.js",
 	"scripts": {
 		"dev": "electron-vite dev",
 		"build": "electron-vite build",
@@ -12,7 +12,7 @@
 		"electron",
 		"vite",
 		"llm",
-		"mcp"
+		"mastra"
 	],
 	"author": "",
 	"license": "MIT",
@@ -31,9 +31,6 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@ai-sdk/google": "^1.2.11",
-		"@mastra/core": "^0.8.3",
-		"@mastra/mcp": "^0.3.10",
 		"@radix-ui/react-avatar": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.7",
@@ -46,6 +43,7 @@
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^2.30.0",
 		"lucide-react": "^0.488.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
