--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@mastra/client-js": "^0.1.17",
 		"@radix-ui/react-avatar": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.7",
