--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@libsql/client": "^0.15.4",
 		"@mastra/client-js": "^0.1.17",
+		"@mastra/memory": "^0.2.10",
 		"@radix-ui/react-avatar": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.7",
