--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@radix-ui/react-collapsible": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.7",
 		"@radix-ui/react-dropdown-menu": "^2.1.7",
+		"@radix-ui/react-scroll-area": "^1.2.4",
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-separator": "^1.1.3",
 		"@radix-ui/react-slot": "^1.2.0",
@@ -48,8 +49,11 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^2.30.0",
 		"lucide-react": "^0.488.0",
+		"next-themes": "^0.4.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-resizable-panels": "^2.1.7",
+		"sonner": "^2.0.3",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"tw-animate-css": "^1.2.5"
