--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
 		"next-themes": "^0.4.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-markdown": "^10.1.0",
 		"react-resizable-panels": "^2.1.7",
+		"remark-gfm": "^4.0.1",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
