Artifactのたたき台を作成

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/node": "^20.8.10",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
+		"@types/react-syntax-highlighter": "^15.5.13",
 		"@vitejs/plugin-react": "^4.0.4",
 		"autoprefixer": "^10.4.21",
 		"electron": "^27.0.0",
@@ -54,6 +55,7 @@
 		"react-dom": "^18.2.0",
 		"react-markdown": "^10.1.0",
 		"react-resizable-panels": "^2.1.7",
+		"react-syntax-highlighter": "^15.6.1",
 		"remark-gfm": "^4.0.1",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^2.6.0",
