--- a/package.json
+++ b/package.json
@@ -56,8 +56,11 @@
 		"react-markdown": "^10.1.0",
 		"react-resizable-panels": "^2.1.7",
 		"react-syntax-highlighter": "^15.6.1",
+		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.1",
+		"remark-sugar-high": "^0.5.0",
 		"sonner": "^2.0.3",
+		"sugar-high": "^0.9.3",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"tw-animate-css": "^1.2.5"
