--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
 		"react-markdown": "^10.1.0",
 		"react-resizable-panels": "^2.1.7",
 		"react-syntax-highlighter": "^15.6.1",
+		"rehype-katex": "^7.0.1",
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.1",
+		"remark-math": "^6.0.0",
 		"remark-sugar-high": "^0.5.0",
 		"sonner": "^2.0.3",
 		"sugar-high": "^0.9.3",
